kubernetes/apps/default/n8n/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: default
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/controller: n8n
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: external
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - n8n.unscfleet.com
  rules:
    - backendRefs:
        - name: n8n
          port: 8080
